networkをコメントアウト

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -24,8 +24,8 @@ services:
                 - NODEJS_VERSION_MAJOR=${NODEJS_VERSION_MAJOR}
         volumes:
             - ../src:/var/www/html
-        networks:
-            - default
+        #networks:
+            #- default
 
     # db
     db:
