--- a/docker/mariadb/my.cnf
+++ b/docker/mariadb/my.cnf
@@ -10,4 +10,4 @@ default-character-set=utf8mb4
 [mysqld]
 default-time-zone='+9:00'
 character-set-server = utf8
-collation-server = utf8mb4_bin
+collation-server = utf8_general_ci
