--- a/docker/mariadb/my.cnf
+++ b/docker/mariadb/my.cnf
@@ -1,13 +1,7 @@
-[server]
-character-set-server = utf8
-
-[client]
-default-character-set = utf8
-
 [mysql]
 default-character-set=utf8mb4
 
 [mysqld]
 default-time-zone='+9:00'
-character-set-server = utf8
-collation-server = utf8_general_ci
+character-set-server = utf8mb4
+collation-server = utf8mb4_bin
